--- a/arrays_strings/unique_chars/unique_chars_challenge.ipynb
+++ b/arrays_strings/unique_chars/unique_chars_challenge.ipynb
@@ -75,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class UniqueChars(object):\n",
     "\n",
     "    def has_unique_chars(self, string):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if string is None:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return len(string)==len(set(string))"
    ]
   },
   {
@@ -104,11 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: test_unique_chars\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_unique_chars.py\n",
     "from nose.tools import assert_equal\n",
@@ -169,9 +175,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
