reverse_string_challenge

--- a/arrays_strings/reverse_string/reverse_string_challenge.ipynb
+++ b/arrays_strings/reverse_string/reverse_string_challenge.ipynb
@@ -72,17 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ReverseString(object):\n",
     "\n",
     "    def reverse(self, chars):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if chars:\n",
+    "            for i in range(len(chars) // 2):\n",
+    "                temp = chars[i]\n",
+    "                chars[i] = chars[len(chars) - i - 1]\n",
+    "                chars[len(chars) - i - 1] = temp\n",
+    "            return chars\n",
+    "        return chars"
    ]
   },
   {
@@ -103,11 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: test_reverse\n",
+      "Success: test_reverse_inplace\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_reverse_string.py\n",
     "from nose.tools import assert_equal\n",
@@ -167,9 +177,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
