--- a/arrays_strings/permutation/permutation_challenge.ipynb
+++ b/arrays_strings/permutation/permutation_challenge.ipynb
@@ -78,17 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Permutations(object):\n",
     "\n",
     "    def is_permutation(self, str1, str2):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if not str1 or not str2:\n",
+    "            return False\n",
+    "        else:\n",
+    "            seen = dict()\n",
+    "            for i in str1:\n",
+    "                try:\n",
+    "                    seen[i] += 1\n",
+    "                except:\n",
+    "                    seen[i] = 1\n",
+    "            for i in str2:\n",
+    "                try:\n",
+    "                    seen[i] -= 1\n",
+    "                except:\n",
+    "                    return False\n",
+    "            return not any([seen[i] != 0 for i in seen])\n",
+    "        "
    ]
   },
   {
@@ -109,11 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: test_permutation\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_permutation_solution.py\n",
     "from nose.tools import assert_equal\n",
@@ -173,9 +191,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
