--- a/arrays_strings/two_sum/two_sum_challenge.ipynb
+++ b/arrays_strings/two_sum/two_sum_challenge.ipynb
@@ -79,17 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Solution(object):\n",
     "\n",
     "    def two_sum(self, nums, val):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if nums is None or val is None:\n",
+    "            raise TypeError\n",
+    "        elif not nums:\n",
+    "            raise ValueError\n",
+    "        else:\n",
+    "            for i in range(0, len(nums)-1):\n",
+    "                for j in range(i+1, len(nums)):\n",
+    "                    if nums[i] + nums[j] == val:\n",
+    "                        return [i, j]\n",
+    "                    "
    ]
   },
   {
@@ -108,11 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: test_two_sum\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_two_sum.py\n",
     "from nose.tools import assert_equal, assert_raises\n",
@@ -166,9 +178,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
