--- a/arrays_strings/hash_map/hash_map_challenge.ipynb
+++ b/arrays_strings/hash_map/hash_map_challenge.ipynb
@@ -64,9 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Algorithm\n",
-    "\n",
-    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/arrays_strings/hash_map/hash_map_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "## Algorithm Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/arrays_strings/hash_map/hash_map_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
    ]
   },
   {
@@ -78,40 +76,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Item(object):\n",
     "\n",
     "    def __init__(self, key, value):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        self.key = key\n",
+    "        self.value = value\n",
     "\n",
     "\n",
     "class HashTable(object):\n",
     "\n",
     "    def __init__(self, size):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        self.vector = [[] for i in range(size)]\n",
+    "        self.size = size\n",
     "\n",
     "    def _hash_function(self, key):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        index = key % self.size\n",
+    "        return index\n",
     "\n",
     "    def set(self, key, value):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        for i in self.vector[self._hash_function(key)]:\n",
+    "            if i.key == key:\n",
+    "                i.value = value\n",
+    "                return None\n",
+    "        self.vector[self._hash_function(key)].append(Item(key, value))\n",
     "\n",
     "    def get(self, key):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
-    "\n",
+    "        try:\n",
+    "            for i in self.vector[self._hash_function(key)]:\n",
+    "                if i.key == key:\n",
+    "                    return i.value\n",
+    "            raise KeyError\n",
+    "        except:\n",
+    "            raise KeyError\n",
     "    def remove(self, key):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        try:\n",
+    "            a = ''\n",
+    "            for i in self.vector[self._hash_function(key)]:\n",
+    "                if i.key == key:\n",
+    "                    a = i\n",
+    "                    break\n",
+    "            self.vector[self._hash_function(key)].remove(a)\n",
+    "        except:\n",
+    "            raise KeyError"
    ]
   },
   {
@@ -132,11 +142,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test: get on an empty hash table index\n",
+      "Test: set on an empty hash table index\n",
+      "Test: set on a non empty hash table index\n",
+      "Test: set on a key that already exists\n",
+      "Test: remove on a key that already exists\n",
+      "Test: remove on a key that doesn't exist\n",
+      "Success: test_end_to_end\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_hash_map.py\n",
     "from nose.tools import assert_equal, assert_raises\n",
@@ -214,9 +236,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
